--- a/r5dev/vproj/sdklauncher.vcxproj
+++ b/r5dev/vproj/sdklauncher.vcxproj
@@ -197,6 +197,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Profile|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\public\utility\binstream.cpp" />
     <ClCompile Include="..\public\utility\utility.cpp" />
     <ClCompile Include="..\sdklauncher\basepanel.cpp" />
     <ClCompile Include="..\sdklauncher\sdklauncher.cpp" />
@@ -211,6 +212,7 @@
   <ItemGroup>
     <ClInclude Include="..\core\stdafx.h" />
     <ClInclude Include="..\launcher\launcherdefs.h" />
+    <ClInclude Include="..\public\utility\binstream.h" />
     <ClInclude Include="..\public\utility\utility.h" />
     <ClInclude Include="..\sdklauncher\basepanel.h" />
     <ClInclude Include="..\sdklauncher\sdklauncher.h" />
